--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 certifi==2025.7.14
 charset-normalizer==3.4.2
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.59.0
 greenlet==3.2.3
 idna==3.10
-numpy==2.3.1
+kiwisolver==1.4.8
+matplotlib==3.10.3
+narwhals==1.48.1
+numpy==2.3.2
+packaging==25.0
 pandas==2.3.1
+pillow==11.3.0
+plotly==6.2.0
 psycopg2-binary==2.9.10
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 requests==2.32.4
 six==1.17.0
 SQLAlchemy==2.0.41
+tqdm==4.67.1
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
